--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 			           	<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contact
         				</a>
 			           		<div class="dropdown-menu" aria-labelledby="navbarDropdown">    
-	    						<a class="dropdown-item ddaw" href="tel:7977130230" aria-label="Phone"><i class="fas fa-phone fa-2x"></i></a>
+	    						<a class="dropdown-item ddaw fontaw1" href="tel:7977130230" aria-label="Phone"><i class="fas fa-phone fa-2x"></i></a>
 	        					<a class="dropdown-item ddaw" href="mailto:atakamol05@gmail.com" aria-label="Email"><i class="far fa-envelope fa-2x"></i></a>
 								<a class="dropdown-item ddaw" href="https://github.com/AmolAtak" aria-label="Github"><i class="fab fa-github fa-2x"></i></a>
 								<a class="dropdown-item ddaw" href="https://www.linkedin.com/in/amolatak05" aria-label="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>	
@@ -107,10 +107,18 @@
 			<div>
 				<div>
 					<h5 class="work">My Work</h5>
-					<a href="https://amolatak.github.io/album/Family_Album/index.html" alt="Family Album">
+					<div class="myWork family">
+						<a href="https://amolatak.github.io/album/Family_Album/index.html" alt="Family Album">
 						<img class="img album" src="images/album1.jpg">
 					</a>
 					<a class="falbum" href="https://amolatak.github.io/album/Family_Album/index.html" alt="Family Album">Family Album</a>
+					</div>
+					<div class="myWork">
+						<a href="https://amolatak.github.io/Calculator/index.html" alt="Calculator">
+						<img class="img album calculator" src="images/calculator3.png">
+					</a>
+					<a class="falbum calculatorName" href="https://amolatak.github.io/Calculator/index.html" alt="Calculator">Calculator</a>
+					</div>
 				</div>
 			</div>
 		</main>
@@ -119,7 +127,7 @@
 			<img class="logo-footer" src="images/logo1.png" alt="Logo">
 			<p class="para-footer">Living, learning, &amp leveling up <br>one day at a time.</p>
   			<div class="awe">
-		        <a class="fontaw" href="tel:7977130230" aria-label="Phone"><i class="fas fa-phone fa-2x"></i></a>
+		        <a class="fontaw fontaw1" href="tel:7977130230" aria-label="Phone"><i class="fas fa-phone fa-2x"></i></a>
 		        <a class="fontaw" href="mailto:atakamol05@gmail.com" aria-label="Email"><i class="far fa-envelope fa-2x"></i></a>
 				<a class="fontaw" href="https://github.com/AmolAtak" aria-label="Github"><i class="fab fa-github fa-2x"></i></a>
 				<a class="fontaw" href="https://www.linkedin.com/in/amolatak05" aria-label="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>
@@ -134,3 +142,4 @@
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</body>
 </html>
+
