--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial scale=1.0">
@@ -59,45 +59,45 @@
 				<div class="inner-two">
 					<div>
 						<div class="inner-two-one">
-							<img class="img design1" src="images/design7.jpg">
+							<img class="img design1" src="images/design7.jpg" alt="Design Image">
 							<p>I value simple content structure, clean design, patterns, and thoughtful interactions and emphasis on validation.</p>
 						</div>
 						<div class="FED">
 							<p class="fed-head">Front-End Developer</p>
-							<img class="img fed-img" src="images/FEDev.jpg">
+							<img class="img fed-img" src="images/FEDev.jpg" alt="front end image">
 							<p class="fed-para">I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
 						</div>
 						<div>
 							<p class="fed-head wds1">Web-Design Skills</p>
-							<img class="lang-img" src="images/html1.png">
-							<img class="lang-img" src="images/css1.png">
-							<img class="lang-img wds" src="images/js2.jpg">
+							<img class="lang-img" src="images/html1.png" alt="html logo">
+							<img class="lang-img" src="images/css1.png" alt="css logo">
+							<img class="lang-img wds" src="images/js2.jpg" alt="javascript logo">
 						</div>
 						<div class="rwd">
 							<p class="fed-head">Responsive Web-Design</p>
 							<div>
-								<img class="lang-img html" src="images/rwd1.png">
+								<img class="lang-img html" src="images/rwd1.png" alt="RWD logo">
 							</div>
 						</div>
 						<div>
 							<p class="fed-head">Tools I know</p>
-							<img class="tools-img t1" src="images/bootstrap.jpg">
-							<img class="tools-img" src="images/github.png"><br>
+							<img class="tools-img t1" src="images/bootstrap.jpg" alt="bootstrap logo">
+							<img class="tools-img" src="images/github.png" alt="github logo"><br>
 							<p class="para3">Bootstrap</p>
 							<p class="para3">Github</p>
 						</div>
 						<div class="pl">
 							<p class="fed-head">Programming Languages</p>
 							<div class="pl1">
-								<img class="pr-img pr1" src="images/python5.png">
+								<img class="pr-img pr1" src="images/python5.png" alt="python logo">
 								<p class="para2 pr2">Python</p> 
 							</div>
 							<div class="pl1">
-								<img class="pr-img" src="images/sql1.png">
+								<img class="pr-img" src="images/sql1.png" alt="sql logo">
 								<p class="para2 sql">MySQL</p>
 							</div>	
 							<div class="pl1">
-								<img class="pr-img php" src="images/php5.png">
+								<img class="pr-img php" src="images/php5.png" alt="php logo">
 								<p class="para2 php2">PHP</p>
 							</div>
 						</div>
@@ -108,16 +108,16 @@
 				<div>
 					<h5 class="work">My Work</h5>
 					<div class="myWork family">
-						<a href="https://amolatak.github.io/album/Family_Album/index.html" alt="Family Album">
-						<img class="img album" src="images/album1.jpg">
+						<a href="https://amolatak.github.io/album/Family_Album/index.html">
+						<img class="img album" src="images/album1.jpg" alt="album photo">
 					</a>
-					<a class="falbum" href="https://amolatak.github.io/album/Family_Album/index.html" alt="Family Album">Family Album</a>
+					<a class="falbum" href="https://amolatak.github.io/album/Family_Album/index.html">Family Album</a>
 					</div>
 					<div class="myWork">
-						<a href="https://amolatak.github.io/Calculator/index.html" alt="Calculator">
-						<img class="img album calculator" src="images/calculator3.png">
+						<a href="https://amolatak.github.io/Calculator/index.html">
+						<img class="img album calculator" src="images/calculator3.png" alt="calculator vector">
 					</a>
-					<a class="falbum calculatorName" href="https://amolatak.github.io/Calculator/index.html" alt="Calculator">Calculator</a>
+					<a class="falbum calculatorName" href="https://amolatak.github.io/Calculator/index.html">Calculator</a>
 					</div>
 				</div>
 			</div>
@@ -125,14 +125,14 @@
 
 		<footer>
 			<img class="logo-footer" src="images/logo1.png" alt="Logo">
-			<p class="para-footer">Living, learning, &amp leveling up <br>one day at a time.</p>
+			<p class="para-footer">Living, learning, &amp; leveling up <br>one day at a time.</p>
   			<div class="awe">
 		        <a class="fontaw fontaw1" href="tel:7977130230" aria-label="Phone"><i class="fas fa-phone fa-2x"></i></a>
 		        <a class="fontaw" href="mailto:atakamol05@gmail.com" aria-label="Email"><i class="far fa-envelope fa-2x"></i></a>
 				<a class="fontaw" href="https://github.com/AmolAtak" aria-label="Github"><i class="fab fa-github fa-2x"></i></a>
 				<a class="fontaw" href="https://www.linkedin.com/in/amolatak05" aria-label="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>
   			</div>
-  			<div class="copy"> Handcrafted by me &copy Amol Atak</div>
+  			<div class="copy"> Handcrafted by me &copy; Amol Atak</div>
 		</footer>
 
 		<!-- Optional JavaScript -->
@@ -142,4 +142,3 @@
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	</body>
 </html>
-
