--- a/resumeAmol.html
+++ b/resumeAmol.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial scale=1.0">
@@ -37,17 +37,17 @@
   				</div>
 			</nav>
 		</header>
-		<img class="resume" src="images/ResumeAmol.jpg"><br>
+		<img class="resume" src="images/ResumeAmol.jpg" alt="resume><br>
 		<footer>
 			<img class="logo-footer" src="images/logo1.png" alt="Logo">
-			<p class="para-footer">Living, learning, &amp leveling up <br>one day at a time.</p>
+			<p class="para-footer">Living, learning, &amp; leveling up <br>one day at a time.</p>
   			<div class="awe">
 		        <a class="fontaw" href="tel:7977130230" aria-label="Phone"><i class="fas fa-phone fa-2x"></i></a>
 		        <a class="fontaw" href="mailto:atakamol05@gmail.com" aria-label="Email"><i class="far fa-envelope fa-2x"></i></a>
 				<a class="fontaw" href="https://github.com/AmolAtak" aria-label="Github"><i class="fab fa-github fa-2x"></i></a>
 				<a class="fontaw" href="https://www.linkedin.com/in/amolatak05" aria-label="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>
   			</div>
-  			<div class="copy"> Handcrafted by me &copy Amol Atak</div>
+  			<div class="copy"> Handcrafted by me &copy; Amol Atak</div>
 		</footer>
 
 		<!-- Optional JavaScript -->
