--- a/resumeAmol.html
+++ b/resumeAmol.html
@@ -37,7 +37,7 @@
   				</div>
 			</nav>
 		</header>
-		<img class="resume" src="images/ResumeAmol.jpg" alt="resume><br>
+		<img class="resume" src="images/ResumeAmol.jpg" alt="resume"><br>
 		<footer>
 			<img class="logo-footer" src="images/logo1.png" alt="Logo">
 			<p class="para-footer">Living, learning, &amp; leveling up <br>one day at a time.</p>
